fix: widht of latest posts on mobile
Former-commit-id: 8a0d9cab34b9dc8d9b269b20340fdbfba057f122

--- a/themes/future-imperfect/static/css/add-on.css
+++ b/themes/future-imperfect/static/css/add-on.css
@@ -400,8 +400,18 @@ ul.pagination .button {
 
 div.recent-posts-item {
     list-style-type: none;
-    min-width: 26em;
+    min-width: 21em;
     display: inline-block;
+}
+@media screen and (max-width: 736px) {
+    div.recent-posts-item {
+        min-width: 0em;
+    }
+}
+@media screen and (max-width: 480px) {
+    div.recent-posts-item {
+        min-width: 0em;
+    }
 }
 
 div.recent-posts-item a {
